# dirtest

./: .gitignore  README.md  pyproject.toml
dirtest/: __init__.py  __main__.py  _path_adding.py  mod_a.py  sa  sb  submodule_a
dirtest/tools/: __init__.py  _path_adding.py  exe1.py  exe2.py  exe3.py
dirtest/tools/exe4/: __init__.py  __main__.py  _path_adding.py  exe41.py  exe42.py
docs/: memo.md
pkgs/sa/: pyproject.toml
pkgs/sa/sa/: modsa.py
pkgs/sb/: pyproject.toml
pkgs/sb/pkgs/sba/: pyproject.toml
pkgs/sb/pkgs/sba/sba/: modsba.py
pkgs/sb/sb/: __main__.py  modsb.py  sba
pkgs/submodule_a/: pyproject.toml
pkgs/submodule_a/submodule_a/: submodule_a.py
